# TransferMatrix

./: CLAUDE.md  README.md  pyproject.toml
app/: ANGLE_MAP_CONTRACT.md  ARCHITECTURE.md  __init__.py  __main__.py  config.py  ids.py  layout.py  main.py  plots.py  state.py
app/assets/: style.css
app/callbacks/: __init__.py  optimize_callbacks.py  simulate_callbacks.py  sketch_callbacks.py  stack_callbacks.py
app/components/: __init__.py  header.py  material_input.py  optimize_panel.py  results_panel.py  simulate_panel.py  stack_builder.py
docs/: codex-history.md
examples/: basic_stack.py  dbr_benchmark.py  dispersive_material_from_csv.py  gold_sample.csv  gpu_check.py  interactive_backend.py  optimize_antireflection.py  optimize_resonance_target.py
multilayer_tmm/: __init__.py  io.py  layers.py  materials.py  optimize.py  resonance.py  tmm.py  utils.py
tests/: test_angle_map.py  test_angle_map_kernel.py  test_app_feature_c.py  test_app_gui.py  test_energy_conservation.py  test_export_outputs.py  test_gradients.py  test_resonance.py  test_single_interface.py  test_vectorized_spectrum.py
